# BiorOffice

./: .gitignore  CHECKLIST.md  NOTICE  README.md
e2e/: bioroffice-install.spec.ts  bioroffice-verify.spec.ts
extension/: README.md  manifest.json  pyproject.toml
extension/skills/bioroffice-excel/: SKILL.md
extension/skills/bioroffice-office-suite/: SKILL.md
extension/skills/bioroffice-powerpoint/: SKILL.md
extension/skills/bioroffice-word/: SKILL.md
extension/src/bioroffice/: __init__.py  __main__.py  cli.py
scripts/: build_brxt.sh  functional_test.py
